# jisper

./: README.md  build.py  context.json  default_prompt.yaml  feature-list.md  jisper.go  jisper.py  jisper_logic.go  jispercli.go  jispergit.go  jisperlogic.go  jisperutils.go  main_cli_tool.py  prompt.jinja  prompt.md  pyproject.toml  requirements.txt  schm.py  test.md
