[project]
name = "jisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amazon-ion>=0.13.0",
    "genson>=1.3.0",
    "gitpython>=3.1.46",
    "json5>=0.13.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "typer>=0.21.1",
]
